--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <link rel="icon" type="image/x-icon" href="app/assets/img/favicon.ico"/>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&amp;display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css%2c_bootstrap.min.css%2bcss%2c_owl.carousel.min.css%2bcss%2c_owl.theme.default.min.css%2bcss%2c_jquery.fancybox.min.css%2bfonts%2c_icomoon%2c_style.css%2bfonts%2c_flaticon%2c_font%2c_flaticon"/>
+<link rel="stylesheet" href="a.css"/>
 <title>Promisine</title>
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="100">
